tests/lean/holes.lean.expected.out
holes.lean:4:4-4:7: error: placeholders '_' cannot be used where a function is expected
holes.lean:10:9-10:12: error: Implicit argument could not be inferred in application of `g`.

The argument `β` is not determined by the other arguments or the expected type in
  @g Nat (?_ x) x

context:
x : Nat
⊢ Type
holes.lean:10:15-10:18: error: Implicit argument could not be inferred in application of `g`.

The argument `β` is not determined by the other arguments or the expected type in
  @g Nat (?_ x) x

context:
x : Nat
⊢ Type
holes.lean:11:4-11:5: error: Placeholder could not be inferred.

context:
x : Nat
y : Nat := g x + g x
⊢ Nat
holes.lean:11:8-11:13: error: Placeholder could not be inferred.

context:
case hole
x : Nat
y : Nat := g x + g x
⊢ Nat
holes.lean:13:10-13:11: error: Failed to infer type for binder `β`.

context:
α : Sort u_1
⊢ Sort ?u
holes.lean:15:16-15:17: error: Failed to infer type for binder `β`.

context:
α : Sort u_1
⊢ Sort ?u
holes.lean:18:9-18:10: error: Failed to infer type for binder `β`.

context:
a : Nat
α : Type
⊢ Sort ?u
holes.lean:19:0-19:3: error: Implicit argument could not be inferred in application.

The argument `β` is not determined by the other arguments or the expected type in
  @f Nat (?_ a) a

context:
a : Nat
f : {α : Type} → {β : ?_ a} → α → α := fun {α} {β} a => a
⊢ ?_ a
holes.lean:21:25-22:4: error: Failed to infer definition type.

context:
x : Nat
⊢ Sort ?u
holes.lean:25:8-25:11: error: failed to infer 'let rec' declaration type

context:
x y : Nat
⊢ Sort ?u
